// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "hmr": false,
    "progressBar": true,
  },
  "html": {},
  "output": {},
  "server": {
    "compress": false,
    "headers": {
      "X-Custom-Foo": "bar",
    },
    "historyApiFallback": true,
    "host": "xxx.xxx",
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "port": 8081,
  },
  "tools": {},
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {},
  "server": {},
  "tools": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "favicon": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "favicon": [
      "/https/www.foo.com/default.ico",
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 3`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "inject": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 4`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "inject": [
      "body",
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.metaByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "meta": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.metaByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "meta": [
      {
        "charset": {
          "charset": "UTF-8",
        },
      },
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.templateByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "template": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.templateByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "template": [
      "static/index.html",
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "templateParameters": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "templateParameters": [
      {
        "name": "jack",
      },
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.titleByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "title": [Function],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.titleByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "title": [
      "Default",
      [Function],
    ],
  },
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
  },
  "server": {},
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "cssModules": {
      "auto": [Function],
    },
    "disableCssModuleExtension": true,
  },
  "server": {},
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "inlineScripts": true,
  },
  "server": {},
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "inlineStyles": true,
  },
  "server": {},
}
`;
